# AuroraOps

./: .dockerignore  .gitignore  AuroraOps-需求文档.md  Dockerfile.server  README.md
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  docker-server.yml
client/: .env.example  README.md  build.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
client/.electron-vite/: build-go-agent.ts  dev-runner.ts  run-headless-agent.mjs
client/customTypes/: global.d.ts
client/electron/: main.mjs  preload.mjs
client/go-client/: README.md  auroraops-agent.service  go.mod  go.sum  install-systemd.sh  install-windows-service.ps1  main.go  service_stub.go  service_windows.go  tcp_client.go  terminal.go  uninstall-windows-service.ps1
client/go-client/ui/: app.css  app.js  index.html
client/packaging/linux/: postinst.sh  postrm.sh
client/src/: App.vue  env.d.ts  styles.css
client/src/ipc/: channel.ts
client/src/main/: index.ts
docs/: client-ssh-inventory.md
docs/guide-zh-CN/: README.md  addon-flow.md  addon-helper.md  addon-introduce-catalog.md  code-config.md  code-curd-join.md  code-curd.md  code-start.md  code-template-dev.md  code-tree.md  docker-server.md  start-deploy.md  start-installation.md  start-questions.md  start-update-log.md  sys-auth.md  sys-code.md  sys-cron.md  sys-i18n.md  sys-library.md  sys-middleware.md  sys-payment.md  sys-queue.md  sys-tcp-server.md  sys-tenant.md  sys-utility.md  sys-websocket-client.md  sys-websocket-server.md
new-client/: .dockerignore  BUILD_QUICKSTART.md  Cargo.toml  README_BUILD.md  auroraops-agent.desktop  auroraops-agent.service  auroraops-client-config  build.rs  docker-build-linux.sh  install-kylin-agent-desktop.sh  install-systemd.sh  package-client-lite.sh  package-client-native.sh  package-linux.sh  tsconfig.json
new-client/agent-service-lite/: Cargo.toml
new-client/agent-service-lite/src/: main.rs
new-client/docker/: Dockerfile.linux-builder  Dockerfile.uos-v10
new-client/docs/: WINDOWS_SERVICE.md
new-client/lib/: encode_video.c
new-client/lib/linux/: kms_egl.c  kms_egl.h  uinput.c
new-client/packaging/: agent-config.json
new-client/packaging/deb/: postinst  postrm  prerm
new-client/packaging/rpm/: postuninstall.sh  preuninstall.sh
new-client/packaging/windows/: auroraops-client.nsi
new-client/src/: agent_service.rs  aurora.rs  config.rs  gui.rs  log.rs  main.rs  protocol.rs  service_manager.rs  video.rs  web.rs  websocket.rs  weylus.rs  windows_service.rs
new-client/src/capturable/: captrs_capture.rs  kms.rs  mod.rs  pipewire.rs
new-client/src/input/: autopilot_device_win.rs  device.rs  mod.rs
new-client/ts/: lib.ts
new-client/www/static/: lib.js  style.css
new-client/www/templates/: index.html
scripts/: deploy-windows-agent.sh  smoke-local-agent.sh  smoke-local-server.sh  smoke-local-web.sh  smoke-local.sh  test-all.sh
server/: Makefile  README.MD  go.mod  go.sum  main.go
server/addons/hgexample/: README.MD  main.go
server/addons/modules/: hgexample.go
server/api/servmsg/: auth.go  cron.go  example.go
server/hack/: config.yaml
server/internal/cmd/: auth.go  cmd.go  cron.go  handler_shutdown.go  http.go  queue.go  tools.go  up.go
server/internal/consts/: addons.go  credit_log.go  dept.go  gencodes.go  http.go  order.go  pay.go  servelicense.go  status.go  version.go
server/internal/crons/: close_order.go  test.go  test2.go
server/internal/dao/: addon_hgexample_table.go  addon_hgexample_tenant_order.go  admin_cash.go  admin_credits_log.go  admin_dept.go  admin_member.go  admin_member_post.go  admin_member_role.go  admin_menu.go  admin_notice.go  admin_notice_read.go  admin_oauth.go  admin_order.go  admin_post.go  admin_role.go  admin_role_casbin.go  admin_role_menu.go  ops_asset.go  ops_device.go  ops_device_group.go  pay_log.go  pay_refund.go  sys_addons_config.go  sys_addons_install.go  sys_attachment.go  sys_blacklist.go  sys_config.go  sys_cron.go  sys_cron_group.go  sys_dict_data.go  sys_dict_type.go  sys_ems_log.go  sys_gen_codes.go  sys_gen_curd_demo.go  sys_gen_tree_demo.go  sys_log.go  sys_login_log.go  sys_provinces.go  sys_serve_license.go  sys_serve_log.go  (+2 more)
server/internal/global/: cluster.go  init.go
server/internal/logic/: logic.go
server/internal/model/: tree.go
server/internal/packed/: packed.go
server/internal/queues/: login_log.go  serve_log.go  sys_log.go
server/internal/router/: admin.go  api.go  home.go  websocket.go
server/internal/service/: admin.go  (+6 more)
web/: .env  .env.development  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  stylelint.config.js
web/src/: App.vue
(+432 files in other folders)
