[package]
name = "weylus"
version = "0.11.4"
authors = ["HMH <henry@freedesk.net>"]
license = "AGPL-3.0-or-later"
edition = "2021"
description = "Use your iPad or Android tablet as graphic tablet."

[[bin]]
name = "auroraops-agent"
path = "src/main.rs"

[[bin]]
name = "auroraops-agent-service"
path = "src/agent_service.rs"

[dependencies]
autopilot = { git = "https://github.com/H-M-H/autopilot-rs.git", rev = "63eed09c715bfb665bb23172a3930a528e11691c" }
base64 = "0.22"
bitflags = { version = "^2.6", features = ["serde"] }
bytes = "1.7.1"
clap = { version = "4.5.18", features = ["derive"] }
clap_complete = "4.5.29"
dirs = "^5.0"
fastwebsockets = { version = "0.8.0", features = ["upgrade", "unstable-split"] }
handlebars = "^6.1"
http-body-util = "0.1.2"
hyper = { version = "^1.4", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1.8", features = ["tokio"] }
image = { version = "^0.25", features = ["png"], default-features = false }
image_autopilot = { package = "image", version = "0.22.5", features = [], default-features = false }
libc = "0.2"
percent-encoding = "2.1.0"
portable-pty = "0.9"
qrcode = "0.14.0"
rand = "0.8.5"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
signal-hook = "0.3.17"
sysinfo = "0.38.4"
tokio = { version = "^1", features = ["fs", "macros", "rt-multi-thread", "sync", "net"] }
toml = "^0.9"
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["ansi", "json"], default-features = false }
tungstenite = "0.24"
url = "^2.5"

[target.'cfg(windows)'.dependencies]
fastfetch-sys = { path = "vendor/fastfetch-sys" }
winapi = { version = "0.3.9", features = ["d3d11", "d3dcommon", "dxgi", "dxgi1_2", "dxgitype", "errhandlingapi", "handleapi", "minwindef", "processthreadsapi", "securitybaseapi", "shellapi", "synchapi", "userenv", "winbase", "winnt", "winuser", "winsvc", "wtsapi32"] }
wio = "0.2.2"
captrs = "^0.3.1"

[build-dependencies]
cc = "^1.1"
num_cpus = "^1.16"

[target.'cfg(target_os = "linux")'.dependencies]
dbus = "^0.9"
drm = "0.14"
drm-ffi = "0.9"
drm-fourcc = "2.2"
fastfetch-sys = { path = "vendor/fastfetch-sys" }
gstreamer = { version = "^0.24", optional = true }
gstreamer-app = { version = "^0.24", features = ["v1_16"], optional = true }
gstreamer-video = { version = "^0.24", optional = true }
linux-raw-sys = "0.4"
rustix = { version = "0.38", features = ["mm"] }
x11 = { version = "2.21", features = ["xlib", "xtest"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
pnet_datalink = "^0.35"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "^0.10"
core-graphics = "^0.24"
fastfetch-sys = { path = "vendor/fastfetch-sys" }

[features]
default = ["pipewire"]
agent-service-lite = []
bench = []
ffmpeg-system = []
pipewire = ["gstreamer", "gstreamer-app", "gstreamer-video"]
vaapi = []
va-static = ["vaapi"]

[package.metadata.bundle]
name = "AuroraOps Agent"
identifier = "local.auroraops.agent"

[package.metadata.deb]
name = "auroraops-agent"
section = "graphics"
priority = "optional"
assets = [
    ["target/release/auroraops-agent", "usr/bin/auroraops-agent", "755"],
    ["auroraops-agent.desktop", "usr/share/applications/auroraops-agent.desktop", "755"],
    ["README_BUILD.md", "usr/share/doc/auroraops-agent/README", "644"],
]

[profile.release]
lto = true
opt-level = 3
